# colegio

./: .coverage  .env.utf8  .gitignore  README.md  pyproject.toml  requirements.txt
apps/activos/: forms.py  models.py  urls.py  views.py
apps/bodega/: admin.py  forms.py  models.py  repositories.py  services.py  urls.py  views.py
apps/bodega/management/commands/: populate_initial.py
apps/compras/: admin.py  forms.py  models.py  repositories.py  services.py  urls.py  views.py
apps/inventario/: urls.py
apps/reportes/: models.py  urls.py  views.py
apps/solicitudes/: admin.py  forms.py  models.py  views.py
core/: models.py  settings.py  urls.py  views.py
static/css/: custom.css
static/js/bodega/: entrega-articulos.js  entrega-bienes.js
static/js/compras/: crear-recepcion.js
templates/: index.html
templates/account/gestion_usuarios/: menu_usuarios.html
templates/activos/: detalle_activo.html  menu_inventario.html
templates/bajas_inventario/: menu_bajas.html
templates/bodega/: menu_bodega.html
templates/bodega/articulo/: detalle.html  eliminar.html  form.html  lista.html
templates/bodega/entrega_articulo/: detalle.html  form.html
templates/bodega/entrega_bien/: detalle.html  form.html
templates/bodega/movimiento/: detalle.html  form.html  lista.html
templates/compras/: menu_compras.html
templates/compras/orden/: detalle.html
templates/compras/recepcion_activo/: form.html
templates/compras/recepcion_articulo/: agregar.html  detalle.html  form.html
templates/partials/: base.html  topbar.html
templates/reportes/: dashboard.html
templates/solicitudes/: aprobar_solicitud.html  despachar_solicitud.html  detalle_solicitud.html  menu_solicitudes.html
